--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/react-slick": "^0.23.10",
     "sass": "^1.58.3"
   }
 }
