--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/react-slick": "^0.23.10",
+    "eslint-config-prettier": "^8.7.0",
     "sass": "^1.58.3"
   }
 }
